--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node app.js"
+
+        "test": "jest"
+
     },
     "engines": {
         "node": "6.9.1"
